Sale Price List from EDI
* Sale Price List from EDI
#050812

--- a/locale/ca.po
+++ b/locale/ca.po
@@ -64,7 +64,7 @@ msgstr "Tercers"
 
 msgctxt "field:edi.sale,party:"
 msgid "Party"
-msgstr "Tercers"
+msgstr "Tercer"
 
 msgctxt "field:edi.sale,references:"
 msgid "References"
@@ -73,6 +73,10 @@ msgstr "Referències"
 msgctxt "field:edi.sale,sale:"
 msgid "Sale"
 msgstr "Venda"
+
+msgctxt "field:edi.sale,sale_pricelist_from_edi:"
+msgid "Sale PriceList From EDI"
+msgstr "Preu venda desde EDI"
 
 msgctxt "field:edi.sale,special_condition:"
 msgid "Special Condition"
@@ -242,6 +246,10 @@ msgctxt "field:edi.sale.line.quantity,uom_char:"
 msgid "Uom"
 msgstr "UdM"
 
+msgctxt "field:edi.sale.party,address:"
+msgid "Address"
+msgstr "Adreça"
+
 msgctxt "field:edi.sale.party,city:"
 msgid "City"
 msgstr "Ciutat"
@@ -326,17 +334,21 @@ msgctxt "field:edi.sale.tax,type_:"
 msgid "Type"
 msgstr "Tipus"
 
+msgctxt "field:party.party,sale_pricelist_from_edi:"
+msgid "Sale PriceList From EDI"
+msgstr "Preu venta desde EDI"
+
 msgctxt "field:sale.configuration,inbox_path_edi:"
 msgid "EDI Sale Inbox Path"
 msgstr "EDI Ruta d'entrada Venda"
 
-msgctxt "field:sale.sale,edi:"
-msgid "Edi"
-msgstr "Edi"
-
 msgctxt "field:sale.sale,edi_sale:"
 msgid "Sale"
 msgstr "Venda"
+
+msgctxt "field:sale.sale,is_edi:"
+msgid "Is Edi"
+msgstr "És EDI"
 
 msgctxt "field:sale.sale-edi.sale,edi_sale:"
 msgid "EdiSale"
@@ -408,6 +420,12 @@ msgctxt "model:ir.message,text:msg_no_product"
 msgid "Cannot confirm sale without product \"%(code)s\"."
 msgstr "No es pot confirmar la venda sense el producte \"%(code)s\"."
 
+msgctxt "model:ir.message,text:msg_no_product_salable"
+msgid "Cannot confirm sale without product \"%(code)s\" is salable."
+msgstr ""
+"No es pot confirmar la venda sense que el producte \"%(code)s\" sigui "
+"vendible."
+
 msgctxt "model:ir.model.button,string:cancel_sale_button"
 msgid "Cancel Sales"
 msgstr "Cancelar"
@@ -426,7 +444,7 @@ msgstr "Venda Edi"
 
 msgctxt "model:sale.sale-edi.sale,name:"
 msgid "SaleSale - EdiSale"
-msgstr ""
+msgstr "Venta - Venta Edi"
 
 msgctxt "selection:edi.sale,function_:"
 msgid "Cancel"
@@ -448,6 +466,18 @@ msgctxt "selection:edi.sale,function_:"
 msgid "Replazement"
 msgstr "Reposició"
 
+msgctxt "selection:edi.sale,sale_pricelist_from_edi:"
+msgid "No"
+msgstr "No"
+
+msgctxt "selection:edi.sale,sale_pricelist_from_edi:"
+msgid "Party"
+msgstr "Tercer"
+
+msgctxt "selection:edi.sale,sale_pricelist_from_edi:"
+msgid "Yes"
+msgstr "Si"
+
 msgctxt "selection:edi.sale,special_condition:"
 msgid "Entregar el pedido entero"
 msgstr "Entregar la comanda sencera"
@@ -465,12 +495,12 @@ msgid "Cancel"
 msgstr "Cancel·la"
 
 msgctxt "selection:edi.sale,state:"
-msgid "Draft"
-msgstr "Esborrany"
+msgid "Done"
+msgstr "Realitzades"
 
 msgctxt "selection:edi.sale,state:"
-msgid "done"
-msgstr "Realitzades"
+msgid "Draft"
+msgstr "Esborrany"
 
 msgctxt "selection:edi.sale,type_:"
 msgid "Pedido consignacion"
@@ -649,16 +679,16 @@ msgid "Legal Supplier"
 msgstr "Proveïdor legal"
 
 msgctxt "selection:edi.sale.party,type_:"
-msgid "NAD"
-msgstr "NAD"
-
-msgctxt "selection:edi.sale.party,type_:"
 msgid "Message Receiver"
 msgstr "Receptor del missatge"
 
 msgctxt "selection:edi.sale.party,type_:"
 msgid "Message Sender"
 msgstr "Emisor del mensaje"
+
+msgctxt "selection:edi.sale.party,type_:"
+msgid "NAD"
+msgstr "NAD"
 
 msgctxt "selection:edi.sale.party,type_:"
 msgid "NADPE"
