--- a/locale/es.po
+++ b/locale/es.po
@@ -410,6 +410,10 @@ msgctxt "model:ir.action,name:act_edi_sale_form"
 msgid "Edi Sales"
 msgstr "Venta Edi"
 
+msgctxt "model:ir.action.act_window.domain,name:act_sale_edi_domain_wo_sale"
+msgid "Without Sale"
+msgstr "Sin venta"
+
 msgctxt "model:ir.action.act_window.domain,name:act_sale_edi_domain_cancel"
 msgid "Cancel"
 msgstr "Cancelar"
@@ -437,6 +441,22 @@ msgid "Cannot confirm sale without product \"%(code)s\" is salable."
 msgstr ""
 "No es puede confirmar la venta sin que el producto \"%(code)s\" sea "
 "vendible."
+
+msgctxt "model:ir.message,text:msg_to_many_sales"
+msgid "There are to many sales related to this EDI sale: %(sales)s"
+msgstr "Hay más de una venta relcaionada con esta venta EDI: %(sales)s"
+
+msgctxt "model:ir.message,text:msg_cancel_sale_edi_ediversa"
+msgid "The EDI sales \"%(edi_sales)s\" will be cancelled."
+msgstr "La venta EDI \"%(edi_sales)s\" sersá cancelada."
+
+msgctxt "model:ir.message,text:msg_edi_sale_with_sale"
+msgid ""
+"The EDI sale %(edi_sale)s selected already has a sale (%(sale)s) related. "
+"That's not correct, must be unic."
+msgstr ""
+"La venta EDI %(edi_sale)s seleccionada ya tiene una venta (%(sale)s) "
+"relacionada. Solo puede tener una."
 
 msgctxt "model:ir.model.button,string:cancel_sale_button"
 msgid "Cancel Sales"
