--- a/locale/ca.po
+++ b/locale/ca.po
@@ -30,7 +30,7 @@ msgctxt "field:edi.sale,document_date:"
 msgid "Document Date"
 msgstr "Data document"
 
-msgctxt "field:edi.sale,first_deliver_date:"
+msgctxt "field:edi.sale,first_delivery_date:"
 msgid "First Delivery Date"
 msgstr "Primera Data d'entrega"
 
@@ -42,7 +42,7 @@ msgctxt "field:edi.sale,gross_amount:"
 msgid "Gross Amount"
 msgstr "Total"
 
-msgctxt "field:edi.sale,last_deliver_date:"
+msgctxt "field:edi.sale,last_delivery_date:"
 msgid "Last Delivery Date"
 msgstr "Última data de lliurament"
 
