--- a/locale/es.po
+++ b/locale/es.po
@@ -442,8 +442,8 @@ msgstr ""
 "No es puede confirmar la venta sin que el producto \"%(code)s\" sea "
 "vendible."
 
-msgctxt "model:ir.message,text:msg_to_many_sales"
-msgid "There are to many sales related to this EDI sale: %(sales)s"
+msgctxt "model:ir.message,text:msg_too_many_sales"
+msgid "There are too many sales related to this EDI sale: %(sales)s"
 msgstr "Hay más de una venta relcaionada con esta venta EDI: %(sales)s"
 
 msgctxt "model:ir.message,text:msg_cancel_sale_edi_ediversa"
